--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # MongoDB Atlas Connection URI
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+MONGODB_URI=your_mongodb_uri_here
 
 # Server Port
 PORT=3000
